por cada receta que cumple con highlighted se pone en la sección de favoritos con la imagen el título y el autor correspondiente

--- a/templates/template-recipe.html
+++ b/templates/template-recipe.html
@@ -1,4 +1,4 @@
-<a class="item-recipe" href="#">
+/*<a class="item-recipe" href="#">
   <span class="attribution">
     <span class="title-recipe"> TITULO DE LA RECETA (ATRIBUTO "title" ) </span>
     <span class="metadata-recipe">
@@ -11,4 +11,5 @@
 
   <img src="URL DE LA IMAGEN" />
 </a>
+*/
 
